# GH-X-Coxwave

./: README.md  main.py  pyproject.toml
Chatbot/: create_db.py
HW1-naver_FAQ_chatbot/Doyeong/: README.md
HW1-naver_FAQ_chatbot/Eunhui/: pyproject.toml
HW1-naver_FAQ_chatbot/Eunhui/Chatbot/: build_chatbot.py
HW1-naver_FAQ_chatbot/Jeongmin/: README.md
HW1-naver_FAQ_chatbot/Minhaeng/: README.md
HW1-naver_FAQ_chatbot/Minhye/chatbot/: pyproject.toml
HW1-naver_FAQ_chatbot/Minhye/chatbot/chatbot/: LLM.py  RAG.py  chatbot.py  constants.yaml  database.py  exceptions.py  prompts.yaml
HW2-prompt_engineering/Minhye/: README.md
HW4-KnowledgeGraph-recommender/Eunhui/: .gitignore  README.md  neo4j.yaml  prompts.yaml  pyproject.toml
HW4-KnowledgeGraph-recommender/Eunhui/neo4j/: main.py  neo4j_graph.py
HW4-KnowledgeGraph-recommender/Jungmin/: README.md
Jungmin/: README.md
