[tool.poetry]
name = "neo4j"
version = "0.1.0"
description = "neo4j KnowledgeGraph"
authors = ["Eunhui <yieunhui8321@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.1"
langchain-community = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
